--- a/ui/src/scss/_flatpickr.scss
+++ b/ui/src/scss/_flatpickr.scss
@@ -205,8 +205,7 @@
   position: relative;
   height: auto;
 }
-.numInputWrapper input,
-.numInputWrapper span {
+.numInputWrapper input {
   display: inline-block;
 }
 .numInputWrapper input {
@@ -236,9 +235,6 @@
 }
 .numInputWrapper span:active {
   background: rgba(0,0,0,0.2);
-}
-.numInputWrapper span::after {
-  content: "";
 }
 .numInputWrapper span.arrowUp {
   top: 0;
